--- a/templates/admin/model_list.html
+++ b/templates/admin/model_list.html
@@ -82,7 +82,7 @@
                                             {% if field == 'id' %}
                                                 {{ obj.id }}
                                             {% else %}
-                                                {{ getattr(obj, field) }}
+                                                {{ obj|attr(field) }}
                                             {% endif %}
                                         </td>
                                         {% endfor %}
