authentication changes has been fixed

--- a/templates/admin/model_form.html
+++ b/templates/admin/model_form.html
@@ -201,7 +201,7 @@
                                     {% if not object %}
                                     <div class="mb-3">
                                         <label class="form-label">Password *</label>
-                                        <input type="password" name="password" class="form-control" required>
+                                        <input type="password" name="password_hash" class="form-control" required>
                                     </div>
                                     {% endif %}
                                     <div class="mb-3">
